<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_basex4"
        android:textSize="@dimen/text_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_marginTop="@dimen/margin_basex4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/et_username"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:hint="name@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        android:layout_marginEnd="@dimen/margin_basex4"
        />

    <TextView
        android:layout_marginTop="@dimen/margin_base"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        android:layout_marginStart="@dimen/margin_basex2"
        android:paddingTop="@dimen/padding_base"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/hind_password"
        app:layout_constraintStart_toEndOf="@id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_basex4"
        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_basex4"
        />

    <Button
        android:id="@+id/btn_sign_in_via_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_via_facebook"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>